z-index issue ixed

--- a/front/src/pages/Dashboard/css/Dashboard.scss
+++ b/front/src/pages/Dashboard/css/Dashboard.scss
@@ -132,20 +132,18 @@
     justify-content: space-between;
     gap: 20px;
     height: 60%;
+    z-index: 10;
 
-    // max-height: 50vh;
 
     .left-screen-container {
-      // border: 1px solid rgba(255, 255, 255, 0.3);
-      background-color: rgba(255, 255, 255, 0.3);
+      border: 1px solid rgba(255, 255, 255, 0.3);
       min-width: 300px;
       height:100%;
       border-radius: 20px;
     }
     
     .right-screen-container {
-      // border: 1px solid rgba(255, 255, 255, 0.3);
-      background-color: rgba(255, 255, 255, 0.3);
+      border: 1px solid rgba(255, 255, 255, 0.3);
       width: 350px;
       height:100%;
       border-radius: 20px;
